crates/lang/macro/tests/ui/trait_def/fail/message_selector_invalid_2.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait TraitDefinition {
    #[ink(message, selector)]
    fn message(&self);
}

fn main() {}
