crates/lang/macro/tests/ui/trait_def/fail/message_selector_invalid_2.stderr
error: unknown ink! attribute (path)
 --> $DIR/message_selector_invalid_2.rs:5:20
  |
5 |     #[ink(message, selector)]
  |                    ^^^^^^^^
